# scotbot

./: .env.example  .gitignore  Cargo.toml  README.md
context/: commit_guidelines.md  progress.md  purpose.md  tavily_integration.md
src/: anthropic.rs  chat_state.rs  config.rs  main.rs  runner.rs  ui.rs
src/agent_tools/: mod.rs
src/agent_tools/math/: add.rs  divide.rs  mod.rs  multiply.rs  subtract.rs
src/agent_tools/web/: mod.rs
src/agent_tools/web/search/: mod.rs
src/chat/: input.rs  mod.rs
src/command/: clear.rs  clear_context.rs  compact_context.rs  exit.rs  exit_process.rs  help.rs  history.rs  import_chat_history.rs  mod.rs  model.rs  save_chat_history.rs  show_chat_history.rs  show_context_summary.rs  show_help_message.rs  show_message_history.rs  show_token_usage.rs  summarize.rs  summarize_context.rs  switch_model.rs
