[package]
name = "scotbot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["json"] }
rig-core = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
